--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Homepage for Studio Events provider and services.",
   "main": "scr/index.html",
   "scripts": {
+    "start": "npx live-server src/",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
