--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "studion",
   "version": "0.0.1",
   "description": "Homepage for Studio Events provider and services.",
-  "main": "scr/index.html",
+  "main": "src/index.html",
   "scripts": {
     "start": "npx live-server src/",
     "test": "echo \"Error: no test specified\" && exit 1"
